# Zeno-Resource-Machine

./: .gitignore  AGENTS.md  CONFORMANCE_MATRIX.json  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  PACKAGE_MANIFEST.json  QUALITY_GATES.md  README.md  REVIEW_CHECKLIST.md  SECURITY.md  SEMANTIC_CONTRACTS.md  SPECIFICATION.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: mutants.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
adrs/: README.md
contracts/: ZRM-SC-001.md  ZRM-SC-002.md  ZRM-SC-003.md  ZRM-SC-004.md  ZRM-SC-005.md  ZRM-SC-006.md  ZRM-SC-007.md  ZRM-SC-008.md  ZRM-SC-009.md  ZRM-SC-010.md  ZRM-SC-011.md  ZRM-SC-012.md  ZRM-SC-013.md
crates/zrm-codec/: Cargo.toml
crates/zrm-codec/src/: cursor.rs  error.rs  kani_harnesses.rs  lib.rs  resource_wire_v1.rs
crates/zrm-codec/tests/: resource_wire_v1.rs
crates/zrm-crypto/: Cargo.toml
crates/zrm-crypto/src/: lib.rs
crates/zrm-crypto/tests/: vectors.rs
crates/zrm-kernel/: Cargo.toml
crates/zrm-kernel/src/: lib.rs  resource.rs  resource_roles.rs  role_bound_resource.rs
crates/zrm-kernel/src/resource/: error.rs  kani_harnesses.rs  tests.rs
crates/zrm-kernel/src/resource_roles/: kani_harnesses.rs  tests.rs
crates/zrm-kernel/src/resource_roles/kani_harnesses/: collision.rs  count.rs  duplicate.rs
crates/zrm-kernel/src/role_bound_resource/: kani_harnesses.rs  tests.rs
crates/zrm-kernel/tests/: intrinsic_resource.rs  intrinsic_resource_atlas.rs  resource_role_atlas.rs  resource_roles.rs  role_bound_intrinsic.rs  role_bound_intrinsic_atlas.rs
crates/zrm-verifier-api/: Cargo.toml
crates/zrm-verifier-api/src/: artifact.rs  lib.rs
crates/zrm-verifier-api/tests/: artifact.rs
delegation/: ZRM_COMPLETION_PLAN.json
docs/: AUTHORITY_ABI_FREEZE_PACKET.md  AUTHORITY_MAP.md  BRANCH_PROTECTION.md  DELEGATION_READINESS.md  DEPENDENCY_POLICY.md  POLICY_ACTIVATION_V1_ARCHITECTURE.md  SECURITY_REVIEW_REMEDIATION_2026_07.md
evidence/: README.md  SECURITY_REMEDIATION_MUTATION_MAP.md  WP1_MUTATION_MAP.md  WP2_POLICY_MUTATION_MAP.md  WP3B_INTRINSIC_RESOURCE_MUTATION_MAP.md  WP3C_ROLE_BOUND_INTRINSIC_MUTATION_MAP.md  arm-zrm-frontier-exploration-v1.json  rfc-0003-maintainer-approval-2026-07-12.json  security-remediation-agent-reviews-2026-07-12.json  security-remediation-local-gates-2026-07-12.json  security-remediation-main-integration-2026-07-12.json  wp1-class-c-review-2026-07-11.json  wp1-local-gates-2026-07-10.json  wp2-local-gates-2026-07-11.json  wp3a-local-gates-2026-07-11.json  wp3b-agent-reviews-2026-07-11.json  wp3b-environment-policy-2026-07-11.json  wp3b-local-gates-2026-07-11.json  wp3b-remediation-attestation-2026-07-11.json  wp3c-agent-reviews-2026-07-12.json  wp3c-ci-fuzz-remediation-2026-07-12.json  wp3c-environment-policy-2026-07-12.json  wp3c-local-gates-2026-07-12.json  wp5-bounded-artifact-2026-07-12.json  wp5-environment-policy-2026-07-12.json  wp5-integrated-2026-07-12.json  wp5-main-integration-2026-07-12.json  wp5-path-correction-2026-07-12.json  zrm-semantic-closure-esso-v1.json
fuzz/: Cargo.toml  generate_corpus.py
fuzz/corpus/intrinsic_resource_v1/: zero-application  zero-resource-kind  zero-resource-kind-policy
fuzz/corpus/policy_cost_v1/: small-success
fuzz/corpus/policy_resource_dimensions_v1/: full-width-maximum  lifecycle-maximum-one  lifecycle-maximum-two  lifecycle-maximum-zero  quantity-above-maximum  wrong-unit-precedes-lifecycle  zero-evidence  zero-lifecycle  zero-mintable  zero-transformable
fuzz/corpus/resource_roles_v1/: collision-consumed-created  collision-consumed-referenced  collision-referenced-created  duplicate-consumed  duplicate-created  duplicate-referenced  exact-limit  over-limit  valid-unsorted
fuzz/corpus/resource_wire_v1_decode/: present
fuzz/corpus/role_bound_intrinsic_v1/: absent  consumed  created-permuted  referenced  stale-consumed-identity  stale-created-expiry  stale-created-nonce  stale-nonce-noop-regression  stale-referenced-quantity
fuzz/fuzz_targets/: intrinsic_resource_v1.rs  policy_cost_v1.rs  policy_resource_dimensions_v1.rs  resource_roles_v1.rs  resource_wire_v1_decode.rs  role_bound_intrinsic_v1.rs
reference_models/: RESOURCE_KIND_POLICY_V1_ORACLE.md  RESOURCE_KIND_POLICY_V1_RFC0002_PROPOSED.md  RESOURCE_KIND_POLICY_V1_RFC0003_PROPOSED.md  accounting_aggregate_v1.py  accounting_aggregate_v1_explorer.py  arm_zrm_frontier_explorer.py  arm_zrm_frontier_v1.py  deterministic_authenticated_batch_explorer.py  deterministic_authenticated_batch_v1.py  policy_activation_v1.py  policy_activation_v1_counterexamples.json  policy_activation_v1_explorer.py  resource_kind_policy_v1.py  resource_kind_policy_v1_counterexamples.json  resource_kind_policy_v1_rfc0002_proposed.py  resource_kind_policy_v1_rfc0002_proposed_counterexamples.json  resource_kind_policy_v1_rfc0003_proposed.py  resource_kind_policy_v1_rfc0003_proposed_counterexamples.json  zrm_composition_frontier_v2.py  zrm_composition_frontier_v2_explorer.py
reviews/: RFC-0001-semantic-design-packet.md  RFC-0002-semantic-design-packet.md
rfcs/: 0002-security-review-api-quarantine.md  (+6 more)
(+248 files in other folders)
