[workspace]
resolver = "3"
members = [
    "crates/zrm-codec",
    "crates/zrm-crypto",
    "crates/zrm-kernel",
    "crates/zrm-policy",
    "crates/zrm-types",
    "crates/zrm-verifier-api",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/TheDarkLightX/Zeno-Resource-Machine"

[workspace.dependencies]
sha2 = { version = "=0.11.0", default-features = false }
zrm-codec = { version = "0.1.0", path = "crates/zrm-codec" }
zrm-crypto = { version = "0.1.0", path = "crates/zrm-crypto" }
zrm-kernel = { version = "0.1.0", path = "crates/zrm-kernel" }
zrm-policy = { version = "0.1.0", path = "crates/zrm-policy" }
zrm-types = { version = "0.1.0", path = "crates/zrm-types" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unused_must_use = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
arithmetic_side_effects = "warn"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cognitive_complexity = "deny"
expect_used = "deny"
float_arithmetic = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
