[package]
name = "zrm-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
zrm-codec = { version = "=0.1.0", path = "../crates/zrm-codec" }
zrm-kernel = { version = "=0.1.0", path = "../crates/zrm-kernel" }
zrm-policy = { version = "=0.1.0", path = "../crates/zrm-policy" }
zrm-types = { version = "=0.1.0", path = "../crates/zrm-types" }

[[bin]]
name = "resource_wire_v1_decode"
path = "fuzz_targets/resource_wire_v1_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_cost_v1"
path = "fuzz_targets/policy_cost_v1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_resource_dimensions_v1"
path = "fuzz_targets/policy_resource_dimensions_v1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resource_roles_v1"
path = "fuzz_targets/resource_roles_v1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "intrinsic_resource_v1"
path = "fuzz_targets/intrinsic_resource_v1.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
