[package]
name = "zrm-kernel"
description = "Pure resource and structural transition validation for the Zeno Resource Machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
zrm-codec.workspace = true
zrm-policy.workspace = true
zrm-types.workspace = true

[lints]
workspace = true
